networking/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: sro-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https-443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "ingress-cert"
      hosts: &hosts
        - "shatteredrealmsonline.com"
        - "shatteredrealms.online"
        - "api.shatteredrealmsonline.com"
        - "api.shatteredrealms.online"
        - "sso.shatteredrealmsonline.com"
        - "sso.shatteredrealms.online"
        - "grafana.shatteredrealmsonline.com"
        - "grafana.shatteredrealmsonline"
        - "kiali.shatteredrealmsonline.com"
        - "kiali.shatteredrealmsonline"
    - hosts: *hosts
      port:
        name: http-my-app
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
