networking/microk8s-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sro-gateway
  namespace: sro
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https-443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "ingress-cert"
      hosts:
        - "shatteredrealmsonline.com"
        - "shatteredrealms.online"
        - "api.shatteredrealmsonline.com"
        - "shatteredrealms.online"
    - hosts:
      - "*"
      port:
        name: http-my-app
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sro-qa-gateway
  namespace: sro-qa
spec:
  selector:
    istio: ingressgateway-qa
  servers:
    - port:
        number: 443
        name: https-443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "ingress-cert"
      hosts:
        - "qa.shatteredrealmsonline.com"
        - "qa.shatteredrealms.online"
        - "qa.api.shatteredrealmsonline.com"
        - "qa.shatteredrealms.online"
    - hosts:
      - "*"
      port:
        name: http-my-app
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sro-dev-gateway
  namespace: sro-dev
spec:
  selector:
    istio: ingressgateway-dev
  servers:
    - port:
        number: 443
        name: https-443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "ingress-cert"
      hosts:
        - "dev.shatteredrealmsonline.com"
        - "dev.shatteredrealms.online"
        - "dev.api.shatteredrealmsonline.com"
        - "dev.shatteredrealms.online"
    - hosts:
      - "*"
      port:
        name: http-my-app
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
