networking/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    alb.ingress.kubernetes.io/healthcheck-port: status-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: |
      {
        "Type": "redirect", 
        "RedirectConfig": { 
          "Protocol": "HTTPS", 
          "Port": "443", 
          "StatusCode": "HTTP_301"
        }
      }
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:779965382548:certificate/b2f00a98-2078-4f53-8e0f-8cbd6399fec6"
  name: gw-main-ingress
  namespace: sro
spec:
  rules:
  - host: "shatteredrealmsonline.com"
    http: &prod_http
      paths: 
      - backend:
          service:
            name: istio-ingressgateway
            port: 
              number: 443
        path: /
        pathType: Prefix
  - host: "shatteredrealms.online"
    http: *prod_http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    alb.ingress.kubernetes.io/healthcheck-port: status-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: |
      {
        "Type": "redirect", 
        "RedirectConfig": { 
          "Protocol": "HTTPS", 
          "Port": "443", 
          "StatusCode": "HTTP_301"
        }
      }
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:779965382548:certificate/b2f00a98-2078-4f53-8e0f-8cbd6399fec6"
  name: gw-main-ingress
  namespace: sro-qa
spec:
  rules:
  - host: "qa.shatteredrealmsonline.com"
    http: &qa_http
      paths: 
      - backend:
          service:
            name: istio-ingressgateway-qa
            port: 
              number: 443
        path: /
        pathType: Prefix
  - host: "qa.shatteredrealms.online"
    http: *qa_http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    alb.ingress.kubernetes.io/healthcheck-port: status-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: |
      {
        "Type": "redirect", 
        "RedirectConfig": { 
          "Protocol": "HTTPS", 
          "Port": "443", 
          "StatusCode": "HTTP_301"
        }
      }
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:779965382548:certificate/b2f00a98-2078-4f53-8e0f-8cbd6399fec6"
  name: gw-main-ingress
  namespace: sro-dev
spec:
  rules:
  - host: "dev.shatteredrealmsonline.com"
    http: &dev_http
      paths: 
      - backend:
          service:
            name: istio-ingressgateway-dev
            port: 
              number: 443
        path: /
        pathType: Prefix
  - host: "dev.shatteredrealms.online"
    http: *dev_http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    alb.ingress.kubernetes.io/healthcheck-port: status-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: |
      {
        "Type": "redirect", 
        "RedirectConfig": { 
          "Protocol": "HTTPS", 
          "Port": "443", 
          "StatusCode": "HTTP_301"
        }
      }
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:779965382548:certificate/d3704d92-525f-4dd4-a2d0-bb384ab3d231"
  name: gw-api-ingress
  namespace: sro
spec:
  rules:
  - host: "api.shatteredrealmsonline.com"
    http: &prod_http
      paths: 
      - backend:
          service:
            name: istio-ingressgateway
            port: 
              number: 443
        path: /
        pathType: Prefix
  - host: "api.shatteredrealms.online"
    http: *prod_http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    alb.ingress.kubernetes.io/healthcheck-port: status-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: |
      {
        "Type": "redirect", 
        "RedirectConfig": { 
          "Protocol": "HTTPS", 
          "Port": "443", 
          "StatusCode": "HTTP_301"
        }
      }
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:779965382548:certificate/d3704d92-525f-4dd4-a2d0-bb384ab3d231"
  name: gw-api-ingress
  namespace: sro-qa
spec:
  rules:
  - host: "qa.api.shatteredrealmsonline.com"
    http: &qa_http
      paths: 
      - backend:
          service:
            name: istio-ingressgateway-qa
            port: 
              number: 443
        path: /
        pathType: Prefix
  - host: "qa.api.shatteredrealms.online"
    http: *qa_http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    alb.ingress.kubernetes.io/healthcheck-port: status-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: |
      {
        "Type": "redirect", 
        "RedirectConfig": { 
          "Protocol": "HTTPS", 
          "Port": "443", 
          "StatusCode": "HTTP_301"
        }
      }
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:779965382548:certificate/d3704d92-525f-4dd4-a2d0-bb384ab3d231"
  name: gw-api-ingress
  namespace: sro-dev
spec:
  rules:
  - host: "dev.api.shatteredrealmsonline.com"
    http:  &dev_http
      paths: 
      - backend:
          service:
            name: istio-ingressgateway-dev
            port: 
              number: 443
        path: /
        pathType: Prefix
  - host: "dev.api.shatteredrealms.online"
    http: *dev_http
