networking/microk8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: istio
spec:
  controller: istio.io/ingress-controller
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gw-main-ingress
  namespace: sro
spec:
  ingressClassName: istio
  tls:
  - hosts:
    - "shatteredrealmsonline.com"
    - "shatteredrealms.online"
    secretName: ingress-cert
  rules:
  - host: "shatteredrealmsonline.com"
    http: &prod_http
      paths: 
      - backend:
          service:
            name: istio-ingressgateway
            port: 
              number: 443
        path: /
        pathType: Prefix
  - host: "shatteredrealms.online"
    http: *prod_http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gw-main-ingress
  namespace: sro-qa
spec:
  ingressClassName: istio
  tls:
  - hosts:
    - "qa.shatteredrealmsonline.com"
    - "qa.shatteredrealms.online"
    secretName: ingress-cert
  rules:
  - host: "qa.shatteredrealmsonline.com"
    http: &qa_http
      paths: 
      - backend:
          service:
            name: istio-ingressgateway-qa
            port: 
              number: 443
        path: /
        pathType: Prefix
  - host: "qa.shatteredrealms.online"
    http: *qa_http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gw-main-ingress
  namespace: sro-dev
spec:
  ingressClassName: istio
  tls:
  - hosts:
    - "dev.shatteredrealmsonline.com"
    - "dev.shatteredrealms.online"
    secretName: ingress-cert
  rules:
  - host: "dev.shatteredrealmsonline.com"
    http: &dev_http
      paths: 
      - backend:
          service:
            name: istio-ingressgateway-dev
            port: 
              number: 443
        path: /
        pathType: Prefix
  - host: "dev.shatteredrealms.online"
    http: *dev_http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gw-api-ingress
  namespace: sro
spec:
  ingressClassName: istio
  tls:
  - hosts:
    - "api.shatteredrealmsonline.com"
    - "api.shatteredrealms.online"
    secretName: ingress-cert
  rules:
  - host: "api.shatteredrealmsonline.com"
    http: &prod_http
      paths: 
      - backend:
          service:
            name: istio-ingressgateway
            port: 
              number: 443
        path: /
        pathType: Prefix
  - host: "api.shatteredrealms.online"
    http: *prod_http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gw-api-ingress
  namespace: sro-qa
spec:
  ingressClassName: istio
  tls:
  - hosts:
    - "qa.api.shatteredrealmsonline.com"
    - "qa.api.shatteredrealms.online"
    secretName: ingress-cert
  rules:
  - host: "qa.api.shatteredrealmsonline.com"
    http: &qa_http
      paths: 
      - backend:
          service:
            name: istio-ingressgateway-qa
            port: 
              number: 443
        path: /
        pathType: Prefix
  - host: "qa.api.shatteredrealms.online"
    http: *qa_http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gw-api-ingress
  namespace: sro-dev
spec:
  ingressClassName: istio
  tls:
  - hosts:
    - "dev.api.shatteredrealmsonline.com"
    - "dev.api.shatteredrealms.online"
    secretName: ingress-cert
  rules:
  - host: "dev.api.shatteredrealmsonline.com"
    http:  &dev_http
      paths: 
      - backend:
          service:
            name: istio-ingressgateway-dev
            port: 
              number: 443
        path: /
        pathType: Prefix
  - host: "dev.api.shatteredrealms.online"
    http: *dev_http
