networking/authz-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: default-auth-policy
  namespace: istio-system
spec:
  action: CUSTOM
  provider:
    name: "oauth2-proxy"
  rules:
  - to:
    - operation:   
        hosts:
          - "api.shatteredrealmsonline.com"  
        notPaths: 
          - "/oauth2/*"
        methods:
          - "GET"
          - "POST"
          - "DELETE"
          - "PUT"
          - "UPDATE"
  selector:
    matchLabels:
      app: istio-ingressgateway
